--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						</div>
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
-								<img src="C:\Users\NBKRIST\Downloads\vineela.jpg" alt="profile_image">
+								<img src="C:vineela.jpg" alt="profile_image">
 								<div class="about-list-icon">
 									<ul>
 										<li>
